# FootageBot

./: .gitignore  CMakeLists.txt  README.md
FootageBot/: CMakeLists.txt  FootageBot.cpp  includes_pch.cpp  includes_pch.h
Tests/: CMakeLists.txt  main.cpp
